[package]
name = "tv-trackr"
version = "0.1.0"
authors = ["Matt Russell <russell.d.matt@gmail.com>"]

[dependencies]
iron = "0.4.*"
persistent = "0.2.1"
router = "0.4.0"
handlebars = "0.23.0"
handlebars-iron = "0.20.0"
mount = "0.2.1"
staticfile = "0.3.1"
rustc-serialize = "*"
serde = "0.8.20"
serde_derive = "0.8.20"
serde_json = "0.8.4"
chrono = "0.2.25"
