[package]
name = "tv-trackr"
version = "0.1.0"
authors = ["Matt Russell <russell.d.matt@gmail.com>"]

[dependencies]
iron = "0.4.*"
persistent = "0.2.1"
router = "0.4.0"
handlebars = { version = "0.23.0", features = ["serde_type"] }
handlebars-iron = { version = "0.20.0", features = ["serde_type"] }
mount = "0.2.1"
staticfile = "0.3.1"
serde = "0.8.20"
serde_derive = "0.8.20"
serde_json = "0.8.4"
bincode = "0.6.0"
time = "0.1.35"
chrono = { version = "0.2", features = ["serde", "rustc-serialize"] }
lazy_static = "0.2"
itertools = "0.5.8"
